# qed-crypto

./: BUILD_WORKING_CONFIG.sh  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  QUICK_BUILD.sh  README.md  ROADMAP.md  START_HERE.md  build_stark.cmake
apps/: CMakeLists.txt
apps/cmptr/: CMakeLists.txt  README.md  SHA3_FINAL_IMPLEMENTATION.md  build.sh
apps/cmptr/src/: basefold_proof_format.h  circuit_format.c  circuit_format.h  evaluator.c  evaluator.h  main.c  main_simple.c  main_webview.c  sha3_final.c  sha3_final.h
apps/cmptr/tools/: count_gate_types.c  trace_evaluation.c
apps/gf128_example/: CMakeLists.txt
apps/gf128_example/src/: main.c
apps/sha3_example/: CMakeLists.txt
apps/sha3_example/src/: main.c
apps/simulator/: CMakeLists.txt
apps/simulator/src/: main.c
apps/truth_challenge_game/: README.md  generate_embedded_html.py  truth_challenge_enhanced.html  truth_challenge_game  truth_challenge_game.c  truth_challenge_launcher  truth_challenge_launcher.c  truth_game_embedded.h  truth_list_view.html
docs/: ARCHITECTURE_VISUAL.md  BASEFOLD_RAA_FULL_CORRECTNESS.md  BASEFOLD_RAA_SECURITY_FINAL.md  BASEFOLD_RAA_SECURITY_SUMMARY.md  BINIUS_REMOVAL_SUMMARY.md  BITCOIN_CIRCUIT_ARCHITECTURE.md  BITCOIN_VERIFICATION_REQUIREMENTS.md  BTC_FUTURE_WORK_TIME_LOCK.md  CIRCUIT_FORMAT_SPEC.md  CIRCUIT_REDUCTION_MATHEMATICAL_THEORY.md  CIRCULAR_RECURSION_PROGRESS.md  CIRCULAR_RECURSION_STATUS.md  CMakeLists.txt  CODE_COVERAGE_GUIDE.md  COMPILER_WARNINGS.md  COMPLETE_BITCOIN_PLAN.md  CPU_ONLY_RECURSIVE_OPTIMIZATION.md  DEVELOPER_QUICKSTART.md  Doxyfile.in  EMPIRICAL_PERFORMANCE_RESULTS.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LOCAL_FUTURE_PROOF_TIME_SYSTEMS.md  NEXT_DEVELOPER_128BIT_GUIDE.md  OPTIMIZED_SECURITY_PROOF.md  PERFORMANCE_BENCHMARKS.md  PRODUCTION_READY.md  PROJECT_ORGANIZATION_SUMMARY.md  PROVING_TIME_BREAKTHROUGH.md  README.md  RECURSIVE_OPTIMIZATION_REPORT.md  RECURSIVE_PROOF_ACHIEVEMENT.md  RECURSIVE_PROOF_BREAKTHROUGH.md  RECURSIVE_PROOF_FINAL_BREAKTHROUGH.md  RECURSIVE_PROOF_OPTIMIZATION_COMPLETE.md  RECURSIVE_PROOF_STATS_REALITY.md  RECURSIVE_STARK_SIGNATURE_DESIGN.md  RECURSIVE_STARK_VDF_DESIGN.md  RECURSIVE_VDF_ADVANTAGES.md  RECURSIVE_VERIFIER_OPTIMIZATION_RESEARCH.md  (+23 more)
docs/architecture/: MASTER_PROJECT_STRUCTURE.md
docs/basefold_raa/: BASEFOLD_RAA_FINAL_PERFORMANCE.md  BASEFOLD_RAA_PERFORMANCE_REPORT.md  DEVELOPER_GUIDE.md  QUICK_START.md  SECURITY_FIXES.md  SECURITY_FIXES_DETAILED.md
docs/guides/: AGGRESSIVE_CLEANUP_PLAN.md  CLEANUP_COMPLETE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  FINAL_CLEAN_STRUCTURE.md  NEXT_CLAUDE_DEVELOPER_GUIDE.md  WHATS_REAL.md  WORKING_BUILD_GUIDE.md
docs/optimization/: EMPIRICAL_PERFORMANCE_REPORT.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PROOF_GENERATION_OPTIMIZATION_V2.md  SIMD_OPTIMIZATION_COMPLETE.md
docs/truth-buckets/: COMPLETE_TRUTH_BUCKET_REPORT.md  COMPREHENSIVE_TRUTH_CATEGORIES.md  COMPREHENSIVE_TRUTH_LIST.md  TRUTH_BUCKET_99_PERCENT_FINAL.md  TRUTH_DEBATE_ANALYSIS.md  TRUTH_EVIDENCE_VERIFICATION_SUMMARY.md  TRUTH_LIST_VIEW_DEFAULT_UPDATE.md  WIP_TRUTH_GENERATION_REPORT.md
examples/: CMakeLists.txt  README.md  README_RISCV.md  basefold_128bit_demo.c  basefold_128bit_fast.c  basefold_128bit_real_benchmark.c  basefold_raa_complete_example.c  basefold_raa_example.c  circular_blockchain_circuit.c  circular_blockchain_demo.c  circular_blockchain_fixed.c  circular_blockchain_gate_witness.c  circular_blockchain_simple.c  circular_blockchain_working.c  compile_time_proof_demo.c  comprehensive_truth_demo.c  crypto_demo.c  crypto_working.c  riscv_integration_example.c  sha3_only_demo.c  sha3_working.c
examples/basic_circuit/: CMakeLists.txt
examples/basic_circuit/src/: main.c
examples/direct_circuit/: CMakeLists.txt
examples/direct_circuit/src/: main.c
examples/test_circuits/: add_4bit.circuit  add_4bit.txt  and_2bit.circuit  xor_2bit.circuit  xor_2bit.txt  xor_2bit_text.circuit  xor_8bit_text.circuit
modules/: CMakeLists.txt
modules/assertion_verifier/: CMakeLists.txt
modules/assertion_verifier/cmake/: assertion_verifierConfig.cmake.in
modules/assertion_verifier/include/: assertion_verifier.h
modules/assertion_verifier/src/: ai_consensus.c  assertion_chain.c  fopl_verifier.c  main.c  sha3_validity.c
modules/basefold/: CMakeLists.txt  README.md  README_ENCODING.md
modules/basefold/cmake/: basefoldConfig.cmake.in
modules/basefold/include/: basefold_trace.h  binary_ntt.h  enc.h  evaluation_domain.h  evaluation_path.h  extended_domain_utils.h  fold_reduce.h  gate_sumcheck.h  gate_sumcheck_multilinear.h  prg.h  (+10 more)
modules/basefold_raa/: CMakeLists.txt  README.md
modules/circuit_engine/: CMakeLists.txt  README.md
modules/cmptr_accumulator/: CMakeLists.txt  README.md
modules/cmptr_blockchain/: CMakeLists.txt  README.md
modules/cmptr_channel/: CMakeLists.txt  README.md
modules/cmptr_commitments/: CMakeLists.txt
modules/cmptr_exchange/: CMakeLists.txt  README.md
modules/cmptr_pos/: CMakeLists.txt  IMPLEMENTATION_STATUS_FINAL.md  POS_OPTIMIZATION_COMPLETE_SUMMARY.md  POS_OPTIMIZATION_FIXES_APPLIED.md  POS_OPTIMIZATION_ISSUES.md
modules/cmptr_signatures/: CMakeLists.txt  README.md
modules/cmptr_stream/: CMakeLists.txt  README.md
modules/cmptr_trees/: CMakeLists.txt
modules/cmptr_vrf/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/formal_proof_circuits/: CMakeLists.txt
modules/gf128/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  bench.sh  codex.md
modules/semantic_qa/: CMakeLists.txt
modules/sha3/: .gitignore  CMakeLists.txt  README.md  bench.sh  codex.md
modules/truth_verifier/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: gate_core.c
tests/: CMakeLists.txt
tests/basefold_raa/: CMakeLists.txt  basefold_raa_detailed_timing.c  basefold_raa_empirical_test.c  basefold_raa_security_test.c  basefold_raa_simple_test.c
tests/integration/: CMakeLists.txt
tests/security/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_example.c
(+704 files in other folders)
